<resources>
    <string name="app_name">Quizz</string>
    <string name="title">Car Logo Quizz</string>
    <string name="question_title">Is the brand was origin from</string>
    <string name="todo">TODO</string>

    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="next_text">Next</string>
    <string name="answer_correct">Correct 😆</string>
    <string name="answer_incorrect">Incorrect 😑</string>

    <string name="baseQuestions">Is the car was origin from </string>

    <string name="germany">Germany</string>
    <string name="japan">Japan</string>
    <string name="sk">South Korea</string>
    <string name="usa">USA</string>
    <string name="france">France</string>
    <string name="sweden">Sweden</string>
    <string name="my">Malaysia</string>
    <string name="china">China</string>

</resources>