<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF4E8"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:id="@+id/vertical_line"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="30dp">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/question_layout"
        android:layout_width="340dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="135dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/shape1">

        <ImageView
            android:id="@+id/france_flag"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/france_flag" />

        <TextView
            android:id="@+id/question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/question_title"
            android:textAlignment="center"
            android:textColor="#3E2723"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:text="@string/question_1"
            android:textAlignment="center"
            android:textColor="#FFE4C6"
            android:textSize="20sp" />
    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/true_button"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="220dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:text="@string/true_text"
        android:textColor="#FF9B7A50"
        android:textSize="15sp"
        android:textStyle="bold" />

    <android.widget.Button
        android:id="@+id/false_button"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/button_shape"
        android:text="@string/false_text"
        android:textColor="#FF9B7A50"
        android:textSize="15sp"
        android:textStyle="bold" />

    <android.widget.Button
        android:id="@+id/next_button"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button2_shape"
        android:text="@string/next_text"
        android:textColor="#FFFFE4C6"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="20dp"
        android:background="#FFF4E8"
        android:src="@drawable/back_button" />

</RelativeLayout>